package com.example;

public enum Direction {
    north,
    west,
    south,
    east
}