package com.example;

public enum Entity {
    wall,
    pellet,
    bigPellet,
    empty;
}
